--- a/contracts/tamagotchi/io/Cargo.toml
+++ b/contracts/tamagotchi/io/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 gmeta = {  git = "https://github.com/gear-tech/gear.git" , branch = "testnet" }
 gstd = { git = "https://github.com/gear-tech/gear.git" , branch = "testnet"}
 scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
-codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive", "full"] }
+parity-scale-codec = { version = "3", default-features = false }
