--- a/contracts/battle/Cargo.toml
+++ b/contracts/battle/Cargo.toml
@@ -1,23 +1,25 @@
 [package]
 name = "battle"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+license.workspace = true
+authors.workspace = true
 
 [dependencies]
-gstd = { git = "https://github.com/gear-tech/gear.git",features = ["debug"], branch = "testnet" }
-codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false }
-battle-io = { path = "io" }
-tmg-io = { path = "../tamagotchi/io" }
-scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
-hex-literal = "0.3.4"
+gstd.workspace = true
+parity-scale-codec.workspace = true
+battle-io.workspace = true
+tmg-io.workspace = true
+scale-info.workspace = true
+hex-literal.workspace = true
 
 [build-dependencies]
-gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "testnet"}
-battle-io = { path = "io" }
+gear-wasm-builder.workspace = true
+battle-io.workspace = true
 
 [dev-dependencies]
-gtest = { git = "https://github.com/gear-tech/gear.git", branch = "testnet"}
-gclient = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
-tokio = "1"
-hex = "0.4"
-battle-state = { path = "state" }
+gtest.workspace = true
+gclient.workspace = true
+tokio.workspace = true
+hex.workspace = true
+battle-state.workspace = true
