--- a/contracts/tamagotchi/Cargo.toml
+++ b/contracts/tamagotchi/Cargo.toml
@@ -1,17 +1,19 @@
 [package]
 name = "tmg"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+license.workspace = true
+authors.workspace = true
 
 [dependencies]
-gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], branch = "testnet" }
-scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
-codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive", "full"] }
-tmg-io = { path = "io" }
+gstd.workspace = true
+scale-info.workspace = true
+parity-scale-codec.workspace = true
+tmg-io.workspace = true
 
 [build-dependencies]
-gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git" , branch = "testnet" }
-tmg-io = { path = "io" }
+gear-wasm-builder.workspace = true
+tmg-io.workspace = true
 
 [dev-dependencies]
-gtest = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
+gtest.workspace = true
