--- a/contracts/tamagotchi/io/Cargo.toml
+++ b/contracts/tamagotchi/io/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
 name = "tmg-io"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+license.workspace = true
+authors.workspace = true
 
 [dependencies]
-gmeta = {  git = "https://github.com/gear-tech/gear.git" , branch = "testnet" }
-gstd = { git = "https://github.com/gear-tech/gear.git" , branch = "testnet"}
-scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
-codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive", "full"] }
+gmeta.workspace = true
+gstd.workspace = true
+scale-info.workspace = true
+parity-scale-codec.workspace = true
