--- a/contracts/tamagotchi/state/Cargo.toml
+++ b/contracts/tamagotchi/state/Cargo.toml
@@ -1,17 +1,19 @@
 [package]
 name = "tmg-state-7"
-version = "0.1.0"
-edition = "2018"
+version.workspace = true
+edition.workspace = true
+license.workspace = true
+authors.workspace = true
 
 [dependencies]
-gmeta = {  git = "https://github.com/gear-tech/gear.git", features = ["codegen"], branch = "stable" }
-gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
-codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive", "full"] }
-scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
-tmg-io-7 = { path = "../io" }
+gmeta = { workspace = true, features = ["codegen"] }
+gstd.workspace = true
+parity-scale-codec.workspace = true
+scale-info.workspace = true
+tmg-io-7.workspace = true
 
 [build-dependencies]
-gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", features = ["metawasm"] }
+gear-wasm-builder = { workspace = true features = ["metawasm"] }
 
 [features]
 default = ["std"]
