--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@polkadot/extension-dapp": "0.46.5",
     "@polkadot/react-identicon": "3.5.1",
     "@polkadot/util": "12.3.2",
+    "@polkadot/wasm-crypto": "7.2.1",
     "@radix-ui/react-scroll-area": "1.0.4",
     "clsx": "1.2.1",
     "dayjs": "1.11.7",
